--- a/serialize_rust/Cargo.toml
+++ b/serialize_rust/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+prost = "0.13.3"
+prost-build = "0.13.3"
 protobuf = "3.7.1"
 rand = "0.8.5"
 serde = { version = "1.0.215", features = ["derive"] }
