--- a/serialize_rust/Cargo.toml
+++ b/serialize_rust/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+maplit = "1.0.2"
 prost = "0.13.3"
 prost-build = "0.13.3"
 protobuf = "3.7.1"
+quick-xml = "0.37.1"
 rand = "0.8.5"
 rmp-serde = "1.3.0"
 serde = { version = "1.0.215", features = ["derive"] }
@@ -14,3 +16,4 @@ serde-protobuf = "0.8.2"
 serde-xml-rs = "0.6.0"
 serde_json = "1.0.132"
 serde_xml = "0.9.1"
+sysinfo = "0.33.0"
